# shovel

./: .gitignore  README.md  docker-compose.yml  example.env
.github/: demo.webp.license
.github/workflows/: docker.yml  linter.yml
grafana/: Dockerfile
grafana/dashboards/: home.json
grafana/provisioning/dashboards/: default.yml
grafana/provisioning/datasources/: sql.yml
suricata/: .dockerignore  Dockerfile  custom.rules  entrypoint.sh  suricata-tcp-payload-sqlite-output.lua  suricata-udp-payload-sqlite-output.lua  suricata.yaml
suricata/lua/: tcpstore.lua  udpstore.lua
suricata/rules/: suricata.rules
suricata/suricata-eve-sqlite-output/: Cargo.toml
suricata/suricata-eve-sqlite-output/src/: database.rs  ffi.rs  lib.rs  schema.sql
webapp/: .dockerignore  Dockerfile  database.py  main.py
webapp/static/: filestore  input_pcaps  tcpstore  udpstore
webapp/static/assets/css/: style.css
webapp/static/assets/js/: api.js  color-mode-switcher.js  flowdisplay.js  flowlist.js
webapp/static/css/: bootstrap.min.css  style.css
webapp/static/js/: api.js  bootstrap.bundle.min.js  color-mode-switcher.js  flowdisplay.js  flowlist.js
webapp/templates/: http-replay.py.jinja2  index.html  index.html.jinja2  raw-replay-socket.py.jinja2  raw-replay.py.jinja2  tcp-replay.py.jinja2
