# Copyright (C) 2024  ANSSI
# SPDX-License-Identifier: CC0-1.0

[package]
name = "suricata-eve-sqlite-output"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "eve_sqlite_output"

[dependencies]
env_logger = { version = "0.11.5", default-features = false }
lazy_static = "1.5.0"
log = "0.4.22"
regex-lite = "0.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
